YEP, configured mongo DB! It was difficult

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=your-mongodb-uri
+MONGO_URI=mongodb+srv://user-glinkin:LvBeKTcHLbNwL4Aa@cluster-wedding-app.b0flixj.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret
